Додане меню в клієнт лікаря. Реалізоване представлення пацієнтів по записів

--- a/PrimaryHealthcareCentre.UIComponent/PrimaryHealthcareCentre.UIComponent.csproj
+++ b/PrimaryHealthcareCentre.UIComponent/PrimaryHealthcareCentre.UIComponent.csproj
@@ -9,8 +9,10 @@
   <ItemGroup>
     <None Remove="Images\cross.png" />
     <None Remove="Images\document.png" />
+    <None Remove="Images\examination.png" />
     <None Remove="Images\home.png" />
     <None Remove="Images\minus.png" />
+    <None Remove="Images\patient.png" />
     <None Remove="Images\stethoscope.png" />
     <None Remove="Images\treatment.png" />
   </ItemGroup>
@@ -22,8 +24,10 @@
   <ItemGroup>
     <Resource Include="Images\cross.png" />
     <Resource Include="Images\document.png" />
+    <Resource Include="Images\examination.png" />
     <Resource Include="Images\home.png" />
     <Resource Include="Images\minus.png" />
+    <Resource Include="Images\patient.png" />
     <Resource Include="Images\stethoscope.png" />
     <Resource Include="Images\treatment.png" />
   </ItemGroup>
