--- a/PrimaryHealthcareCentre.DoctorClient/PrimaryHealthcareCentre.DoctorClient.csproj
+++ b/PrimaryHealthcareCentre.DoctorClient/PrimaryHealthcareCentre.DoctorClient.csproj
@@ -8,6 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.5">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\PrimaryHealthcareCentre.Domain\PrimaryHealthcareCentre.Domain.csproj" />
     <ProjectReference Include="..\PrimaryHealthcareCentre.UIComponent\PrimaryHealthcareCentre.UIComponent.csproj" />
   </ItemGroup>
